--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,4 +1,4 @@
-.ElementBoxBold {
+.RegisterBoxBold {
     height: 50px;
     width: 1000px;
     box-shadow: inset 0px -2px 1px rgba(0, 0, 0, 0.25), 
@@ -10,7 +10,7 @@
     font-weight: bold;
 }
 
-.ElementBox {
+.RegisterBox {
     height: 50px;
     width: 1000px;
     box-shadow: inset 0px -1.25px 1px rgba(0, 0, 0, 0.25);
@@ -19,37 +19,28 @@
     align-items: center;
 }
 
-.noOp {
-    width: 100px;
-    text-align: center;
-}
-
-.titleOp {
+.RtitleOp {
     width: 300px;
     text-align: center;
 }
 
-.timeOp {
+.RtimeOp {
+    width: 300px;
+    text-align: center;
+}
+
+.RtypeOp {
     width: 200px;
     text-align: center;
 }
 
-.typeOp {
-    width: 100px;
+.RcurNumOp {
+    width: 200px;
     text-align: center;
 }
 
-.curNumOp {
-    width: 100px;
-    text-align: center;
-}
-
-.ownerOp {
-    width: 100px;
-    text-align: center;
-}
-
-.stateOp {
-    width: 100px;
-    text-align: center;
+.submit-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 }
