--- a/src/components/Common/Header.css
+++ b/src/components/Common/Header.css
@@ -14,6 +14,8 @@
 }
 
 .headerFont {
+    text-decoration: none;
+    color: inherit;
     font-size: 20px;
     font-family: 'Inria Serif', serif;
 }
